--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "tda-next-template",
+  "name": "tda-root",
   "version": "1.0.0",
-  "description": "A template for Next.js projects",
+  "description": "A tda portfolio project",
   "author": "Kushagra Sharma",
   "license": "MIT",
   "scripts": {
@@ -21,9 +21,12 @@
     "@radix-ui/react-navigation-menu": "^1.2.0",
     "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@types/bcrypt": "^5.0.2",
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.5",
     "next-auth": "^5.0.0-beta.20",
@@ -37,6 +40,7 @@
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "use-debounce": "^10.0.2",
     "uuid": "^10.0.0",
     "zod": "^3.23.8"
   },
