--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-hook-form": "^7.52.2",
     "react-icons": "^5.2.1",
     "react-loader-spinner": "^6.1.6",
+    "react-textarea-autosize": "^8.5.3",
     "resend": "^3.5.0",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
