--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@prisma/client": "^5.17.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-hover-card": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-navigation-menu": "^1.2.0",
     "@radix-ui/react-popover": "^1.1.1",
+    "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@types/bcrypt": "^5.0.2",
     "bcrypt": "^5.1.1",
@@ -27,6 +29,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "embla-carousel-autoplay": "^8.2.1",
+    "embla-carousel-react": "^8.2.1",
     "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.5",
     "next-auth": "^5.0.0-beta.20",
@@ -36,13 +40,22 @@
     "react-hook-form": "^7.52.2",
     "react-icons": "^5.2.1",
     "react-loader-spinner": "^6.1.6",
+    "react-markdown": "^9.0.1",
     "react-textarea-autosize": "^8.5.3",
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-highlight": "^7.0.0",
+    "rehype-katex": "^7.0.1",
+    "rehype-slug": "^6.0.0",
+    "remark-gfm": "^4.0.0",
+    "remark-math": "^6.0.0",
     "resend": "^3.5.0",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "tailwindcss-animations": "^2.0.0",
     "use-debounce": "^10.0.2",
     "uuid": "^10.0.0",
+    "vaul": "^0.9.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
