--- a/package.json
+++ b/package.json
@@ -24,19 +24,19 @@
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@types/bcrypt": "^5.0.2",
-    "@wysimark/react": "^1.0.55",
+    "@types/ua-parser-js": "^0.7.39",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cuid": "^3.0.0",
     "date-fns": "^3.6.0",
-    "date-fns-tz": "^3.2.0",
     "embla-carousel-autoplay": "^8.2.1",
     "embla-carousel-react": "^8.2.1",
+    "lottie-react": "^2.4.0",
     "mini-svg-data-uri": "^1.4.4",
-    "next": "^14.2.15",
-    "next-auth": "^4.24.7",
+    "next": "14.2.5",
+    "next-auth": "^5.0.0-beta.20",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
@@ -48,6 +48,7 @@
     "rehype-autolink-headings": "^7.1.0",
     "rehype-highlight": "^7.0.0",
     "rehype-katex": "^7.0.1",
+    "rehype-raw": "^7.0.0",
     "rehype-slug": "^6.0.0",
     "remark-gfm": "^4.0.0",
     "remark-math": "^6.0.0",
@@ -67,7 +68,6 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/ua-parser-js": "^0.7.39",
     "@types/uuid": "^10.0.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
