--- a/package.json
+++ b/package.json
@@ -19,21 +19,18 @@
     "@radix-ui/react-hover-card": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-navigation-menu": "^1.2.0",
-    "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
-    "@types/bcrypt": "^5.0.2",
     "@types/ua-parser-js": "^0.7.39",
-    "bcrypt": "^5.1.1",
-    "bcryptjs": "^2.4.3",
+    "argon2": "^0.41.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cuid": "^3.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-autoplay": "^8.2.1",
     "embla-carousel-react": "^8.2.1",
-    "lottie-react": "^2.4.0",
+    "highlight.js": "^11.10.0",
+    "katex": "^0.16.11",
     "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.5",
     "next-auth": "^5.0.0-beta.20",
@@ -56,15 +53,12 @@
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
-    "tailwindcss-animations": "^2.0.0",
     "ua-parser-js": "^1.0.39",
     "use-debounce": "^10.0.2",
     "uuid": "^10.0.0",
-    "vaul": "^0.9.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
