--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "embla-carousel-autoplay": "^8.2.1",
     "embla-carousel-react": "^8.2.1",
     "highlight.js": "^11.10.0",
+    "ignore-loader": "^0.1.2",
     "katex": "^0.16.11",
     "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.5",
