--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/ua-parser-js": "^0.7.39",
-    "argon2": "^0.41.1",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cuid": "^3.0.0",
