--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/ua-parser-js": "^0.7.39",
+    "@vercel/analytics": "^1.3.1",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
