--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/ua-parser-js": "^0.7.39",
     "@vercel/analytics": "^1.3.1",
+    "@vercel/speed-insights": "^1.0.12",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
