--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.5",
     "next-auth": "^5.0.0-beta.20",
+    "next-nprogress-bar": "^2.3.14",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
