--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "tailwindcss-textshadow": "^2.1.3",
     "ua-parser-js": "^1.0.39",
     "use-debounce": "^10.0.2",
     "uuid": "^10.0.0",
