--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.3",
     "@types/ua-parser-js": "^0.7.39",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
