--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-tooltip": "^1.1.3",
     "@types/ua-parser-js": "^0.7.39",
     "@vercel/analytics": "^1.3.1",
+    "@vercel/blob": "^0.26.0",
     "@vercel/speed-insights": "^1.0.12",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
