--- a/package.json
+++ b/package.json
@@ -14,15 +14,16 @@
     "@auth/prisma-adapter": "^2.4.2",
     "@hookform/resolvers": "^3.9.0",
     "@prisma/client": "^5.17.0",
-    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-hover-card": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
     "@types/ua-parser-js": "^0.7.39",
+    "@uploadthing/react": "^7.1.5",
     "@vercel/analytics": "^1.3.1",
     "@vercel/blob": "^0.26.0",
     "@vercel/speed-insights": "^1.0.12",
@@ -35,6 +36,7 @@
     "highlight.js": "^11.10.0",
     "ignore-loader": "^0.1.2",
     "katex": "^0.16.11",
+    "lucide-react": "^0.469.0",
     "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.5",
     "next-auth": "^5.0.0-beta.20",
@@ -61,6 +63,7 @@
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss-textshadow": "^2.1.3",
     "ua-parser-js": "^1.0.39",
+    "uploadthing": "^7.4.4",
     "use-debounce": "^10.0.2",
     "uuid": "^10.0.0",
     "zod": "^3.23.8"
